--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,9 +10,11 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+            <script src="https://kit.fontawesome.com/29ef46100e.js" crossorigin="anonymous"></script>
         {% endblock %}
     </head>
     <body>
+        {% include 'base/nav.html.twig' %}
         {% block body %}{% endblock %}
     </body>
 </html>
