Ajout bannière accueil

--- a/templates/home/banniere.html.twig
+++ b/templates/home/banniere.html.twig
@@ -1,7 +1,11 @@
 <section id="banniere" class="container-fluid d-flex justify-content-center align-items-center">
 	<div class="row">
-		<div class="col-sm-12 d-flex justify-content-center align-items-center">
-			<img src="logos/logo_text2.png">
+		<div class="col-sm-12 d-flex flex-column justify-content-center align-items-center">
+			<img class="logo-text" src="logos/logo_text2.png">
+            <h3>Des voix en mémoire</h3>
 		</div>
+        <div class="logo">
+            <img src="logos/logo.png">
+        </div>
 	</div>
 </section>
