--- a/templates/home/banniere.html.twig
+++ b/templates/home/banniere.html.twig
@@ -1,11 +1,11 @@
 <section id="banniere" class="container-fluid d-flex justify-content-center align-items-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex flex-column justify-content-center align-items-center">
-			<img class="logo-text" src="logos/logo_text2.png">
-            <h3>Des voix en mémoire</h3>
+			<img class="logo-text" src="logos/{{ general.logoText }}">
+            <h3>{{ general.phraseTitre }}</h3>
 		</div>
         <div class="logo">
-            <img src="logos/logo.png">
+            <img src="logos/{{ general.logo }}">
         </div>
 	</div>
 </section>
