--- a/templates/base/nav.html.twig
+++ b/templates/base/nav.html.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">
-            <img src="/logos/logo_text2.png" alt="logo" style="width:200px;">
+            <img src="/logos/{{ general.logoText }}" alt="logo" style="width:200px;">
         </a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -29,10 +29,10 @@
 				</li>
 			</ul>
 			<div class="reseaux d-flex justify-content-start">
-				<a href="#">
+				<a href="{{ general.lienFacebook }}">
 					<i class="fab fa-facebook-f"></i>
 				</a>
-				<a href="#">
+				<a href="{{ general.lienInstagram }}">
 					<i class="fab fa-instagram"></i>
 				</a>
 			</div>
