--- a/templates/base/nav.html.twig
+++ b/templates/base/nav.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="/home">
             <img src="/logos/{{ general.logoText }}" alt="logo" style="width:200px;">
         </a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,7 +10,7 @@
 		<div class="collapse navbar-collapse" id="navbarColor03">
 			<ul class="navbar-nav me-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Prestations</a>
+					<a class="nav-link" href="/prestation">Prestations</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Contact</a>
