--- a/assets/styles/prestations.scss
+++ b/assets/styles/prestations.scss
@@ -1,3 +1,13 @@
 #prestations {
     padding-top: 100px;
 }
+
+.carte-presentation {
+    border: 1px solid #ccc;
+    margin: 10px;
+    box-shadow: 4px 4px 4px #ccc;
+
+    h2 {
+        margin-bottom: 20px;
+    }
+}
