--- a/templates/base/nav.html.twig
+++ b/templates/base/nav.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="/home">
+		<a class="navbar-brand" href="/">
             <img src="/logos/{{ general.logoText }}" alt="logo" style="width:200px;">
         </a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
