--- a/templates/prestation/index.html.twig
+++ b/templates/prestation/index.html.twig
@@ -7,7 +7,7 @@
     <h1>Prestations</h1>
     <div class="row">
         {% for prestation in prestations %}
-            <div class="col-md-4">
+            <div class="carte-presentation col-lg-3">
                 <h2>{{ prestation.titre }}</h2>
                 {# <p>{{ prestation.categorie }}</p> #}
                 <p>{{ prestation.contenu1 }}</p>
