--- a/assets/styles/prestations.scss
+++ b/assets/styles/prestations.scss
@@ -6,8 +6,14 @@
     border: 1px solid #ccc;
     margin: 10px;
     box-shadow: 4px 4px 4px #ccc;
+    padding: 20px;
 
     h2 {
         margin-bottom: 20px;
+    }
+
+    hr {
+        width: 50%;
+        margin: 20px auto;
     }
 }
